Afegides coses de la circumferència osculadora.

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -133,6 +133,7 @@
 \DeclareMathOperator{\curvatura}{\kappa}
 \DeclareMathOperator{\tangent}{T}
 \DeclareMathOperator{\normal}{N}
+\DeclareMathOperator{\radicircosculadora}{\rho}
 
 \DeclareMathOperator*{\suport}{Supp}
 
