--- a/parts/FNM.tex
+++ b/parts/FNM.tex
@@ -1839,31 +1839,31 @@
 		\begin{proof}
 			Per veure el punt \eqref{enum:prop:Q és un grup abelià 1} fem
 			\begin{align*}
-			\frac{a}{b}+\frac{c}{d}&=\frac{ad+cb}{bd}\tag{\myref{def:suma de nombres racionals}}\\
-			&=\frac{cb+ad}{bd}\tag{\myref{prop:Z és un grup abelià}}\\
-			&=\frac{cb+ad}{db}\tag{\myref{prop:Z és un anell commutatiu}}\\
-			&=\frac{c}{d}+\frac{a}{b}.\tag{\myref{def:suma de nombres racionals}}
+				\frac{a}{b}+\frac{c}{d}&=\frac{ad+cb}{bd}\tag{\myref{def:suma de nombres racionals}}\\
+				&=\frac{cb+ad}{bd}\tag{\myref{prop:Z és un grup abelià}}\\
+				&=\frac{cb+ad}{db}\tag{\myref{prop:Z és un anell commutatiu}}\\
+				&=\frac{c}{d}+\frac{a}{b}.\tag{\myref{def:suma de nombres racionals}}
 			\end{align*}
 			Per veure el punt \eqref{enum:prop:Q és un grup abelià 2} fem
 			\begin{align*}
-			\frac{a}{b}+\left(\frac{c}{d}+\frac{e}{f}\right)&=\frac{a}{b}+\frac{cf+ed}{df}\tag{\myref{def:suma de nombres racionals}}\\
-			&=\frac{adf+(cf+ed)b}{bdf}\tag{\myref{def:suma de nombres racionals}}\\
-			&=\frac{adf+cfb+edb}{bdf}\tag{\myref{prop:distributiva suma pel producte enters}}\\
-			&=\frac{adf+cbf+ebd}{bdf}\tag{\myref{prop:Z és un anell commutatiu}}\\
-			&=\frac{(ad+cb)f+ebd}{bdf}\tag{\myref{prop:distributiva suma pel producte enters}}\\
-			&=\frac{ad+cb}{bd}+\frac{e}{f}\tag{\myref{def:suma de nombres racionals}}\\
-			&=\left(\frac{a}{b}+\frac{c}{d}\right)+\frac{e}{f}.\tag{\myref{def:suma de nombres racionals}}
+				\frac{a}{b}+\left(\frac{c}{d}+\frac{e}{f}\right)&=\frac{a}{b}+\frac{cf+ed}{df}\tag{\myref{def:suma de nombres racionals}}\\
+				&=\frac{adf+(cf+ed)b}{bdf}\tag{\myref{def:suma de nombres racionals}}\\
+				&=\frac{adf+cfb+edb}{bdf}\tag{\myref{prop:distributiva suma pel producte enters}}\\
+				&=\frac{adf+cbf+ebd}{bdf}\tag{\myref{prop:Z és un anell commutatiu}}\\
+				&=\frac{(ad+cb)f+ebd}{bdf}\tag{\myref{prop:distributiva suma pel producte enters}}\\
+				&=\frac{ad+cb}{bd}+\frac{e}{f}\tag{\myref{def:suma de nombres racionals}}\\
+				&=\left(\frac{a}{b}+\frac{c}{d}\right)+\frac{e}{f}.\tag{\myref{def:suma de nombres racionals}}
 			\end{align*}
 			Per veure el punt \eqref{enum:prop:Q és un grup abelià 3} fem
 			\begin{align*}
-			\frac{a}{b}+\frac{0}{1}&=\frac{a\cdot 1}{b\cdot 1}\tag{\myref{def:suma de nombres racionals}}\\
-			&=\frac{a}{b}.\tag{\myref{prop:Z és un anell}}
+				\frac{a}{b}+\frac{0}{1}&=\frac{a\cdot 1}{b\cdot 1}\tag{\myref{def:suma de nombres racionals}}\\
+				&=\frac{a}{b}.\tag{\myref{prop:Z és un anell}}
 			\end{align*}
 			Per veure el punt \eqref{enum:prop:Q és un grup abelià 4} fem
 			\begin{align*}
-			\frac{a}{b}+\frac{-a}{b}&=\frac{ab-ab}{bb}\tag{\myref{def:suma de nombres racionals}}\\
-			&=\frac{0}{bb}\tag{\myref{prop:Z és un grup}}\\
-			&=\frac{0}{1}.\tag{\myref{prop:element neutre per la suma Q}}
+				\frac{a}{b}+\frac{-a}{b}&=\frac{ab-ab}{bb}\tag{\myref{def:suma de nombres racionals}}\\
+				&=\frac{0}{bb}\tag{\myref{prop:Z és un grup}}\\
+				&=\frac{0}{1}.\tag{\myref{prop:element neutre per la suma Q}}
 			\end{align*}
 			i hem acabat.
 		\end{proof}
@@ -1884,36 +1884,36 @@
 		\begin{proof}
 			Per veure el punt \eqref{enum:prop:Q és un anell commutatiu 1} fem
 			\begin{align*}
-			\frac{a}{b}\frac{c}{d}&=\frac{ac}{bd}\tag{\myref{def:producte de nombres racionals}}\\
-			&=\frac{ca}{db}\tag{\myref{prop:Z és un anell commutatiu}}\\
-			&=\frac{c}{d}\frac{a}{b}.\tag{\myref{def:producte de nombres racionals}}
+				\frac{a}{b}\frac{c}{d}&=\frac{ac}{bd}\tag{\myref{def:producte de nombres racionals}}\\
+				&=\frac{ca}{db}\tag{\myref{prop:Z és un anell commutatiu}}\\
+				&=\frac{c}{d}\frac{a}{b}.\tag{\myref{def:producte de nombres racionals}}
 			\end{align*}
 			Per veure el punt \eqref{enum:prop:Q és un anell commutatiu 2} fem
 			\begin{align*}
-			\frac{a}{b}\frac{1}{1}&=\frac{a\cdot 1}{b\cdot 1}\tag{\myref{def:producte de nombres racionals}}\\
-			&=\frac{a}{b}.\tag{\myref{prop:Z és un grup}}
+				\frac{a}{b}\frac{1}{1}&=\frac{a\cdot 1}{b\cdot 1}\tag{\myref{def:producte de nombres racionals}}\\
+				&=\frac{a}{b}.\tag{\myref{prop:Z és un grup}}
 			\end{align*}
 			Per veure el punt \eqref{enum:prop:Q és un anell commutatiu 3} fem
 			\begin{align*}
-			\frac{a}{b}\left(\frac{c}{d}\frac{e}{f}\right)&=\frac{a}{b}\frac{ce}{df}\tag{\myref{def:producte de nombres racionals}}\\
-			&=\frac{a(ce)}{b(df)}\tag{\myref{def:producte de nombres racionals}}\\
-			&=\frac{(ac)e}{(bd)f}\tag{\myref{prop:Z és un anell associativitat}}\\
-			&=\frac{ac}{bd}\frac{e}{f}\tag{\myref{def:producte de nombres racionals}}\\
-			&=\left(\frac{a}{b}\frac{c}{d}\right)\frac{e}{f}.\tag{\myref{def:producte de nombres racionals}}
+				\frac{a}{b}\left(\frac{c}{d}\frac{e}{f}\right)&=\frac{a}{b}\frac{ce}{df}\tag{\myref{def:producte de nombres racionals}}\\
+				&=\frac{a(ce)}{b(df)}\tag{\myref{def:producte de nombres racionals}}\\
+				&=\frac{(ac)e}{(bd)f}\tag{\myref{prop:Z és un anell associativitat}}\\
+				&=\frac{ac}{bd}\frac{e}{f}\tag{\myref{def:producte de nombres racionals}}\\
+				&=\left(\frac{a}{b}\frac{c}{d}\right)\frac{e}{f}.\tag{\myref{def:producte de nombres racionals}}
 			\end{align*}
 			Per veure el punt \eqref{enum:prop:Q és un anell commutatiu 4} fem
 			\begingroup\allowdisplaybreaks
 			\begin{align*}
-			\frac{a}{b}\left(\frac{c}{d}+\frac{e}{f}\right)&=\frac{a}{b}\frac{cf+de}{df}\tag{\myref{def:suma de nombres racionals}}\\
-			&=\frac{a(cf+de)}{bdf}\tag{\myref{def:producte de nombres racionals}}\\
-			&=\frac{acf+ade}{bdf}\tag{\myref{prop:Z és un anell distributiva suma pel producte}}\\
-			&=\frac{acf+ade}{bdf}\frac{1}{1}\tag{\myref{def:producte de nombres racionals}}\\
-			&=\frac{acf+ade}{bdf}\frac{b}{b}\tag{\myref{prop:element neutre del producte en racionals}}\\
-			&=\frac{(acf+aeb)b}{bdfb}\tag{\myref{def:producte de nombres racionals}}\\
-			&=\frac{acfb+aedb}{bdfb}\tag{\myref{def:producte de nombres enters}}\\
-			&=\frac{acbf+aebd}{bdbf}\tag{\myref{prop:Z és un anell commutatiu}}\\
-			&=\frac{ac}{bd}+\frac{ae}{bf}\tag{\myref{def:suma de nombres racionals}}\\
-			&=\frac{a}{b}\frac{c}{d}+\frac{a}{b}\frac{e}{f}.\tag{\myref{def:producte de nombres racionals}}
+				\frac{a}{b}\left(\frac{c}{d}+\frac{e}{f}\right)&=\frac{a}{b}\frac{cf+de}{df}\tag{\myref{def:suma de nombres racionals}}\\
+				&=\frac{a(cf+de)}{bdf}\tag{\myref{def:producte de nombres racionals}}\\
+				&=\frac{acf+ade}{bdf}\tag{\myref{prop:Z és un anell distributiva suma pel producte}}\\
+				&=\frac{acf+ade}{bdf}\frac{1}{1}\tag{\myref{def:producte de nombres racionals}}\\
+				&=\frac{acf+ade}{bdf}\frac{b}{b}\tag{\myref{prop:element neutre del producte en racionals}}\\
+				&=\frac{(acf+aed)b}{bdfb}\tag{\myref{def:producte de nombres racionals}}\\
+				&=\frac{acfb+aedb}{bdfb}\tag{\myref{def:producte de nombres enters}}\\
+				&=\frac{acbf+aebd}{bdbf}\tag{\myref{prop:Z és un anell commutatiu}}\\
+				&=\frac{ac}{bd}+\frac{ae}{bf}\tag{\myref{def:suma de nombres racionals}}\\
+				&=\frac{a}{b}\frac{c}{d}+\frac{a}{b}\frac{e}{f}.\tag{\myref{def:producte de nombres racionals}}
 			\end{align*}
 			\endgroup
 			I hem acabat.
